--- a/public/stylesheets/less/acknowledgements.less
+++ b/public/stylesheets/less/acknowledgements.less
@@ -5,8 +5,10 @@ body {
 }
 
 #acknowledgements_container {
+	margin-top: 25px;
 	position: absolute;
 	@media(min-width: @screen-md) {
+		margin-top: 50px;
 		padding: 0px 250px;
 	}
 }
